--- a/Interfaces/MainMenu.xib
+++ b/Interfaces/MainMenu.xib
@@ -1,9 +1,10 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
         <deployment version="1080" identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="10117"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
         <capability name="box content view" minToolsVersion="7.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -43,32 +44,30 @@ Cg
                         <rect key="frame" x="-1" y="22" width="944" height="603"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <box title="Title" boxType="oldStyle" borderType="none" titlePosition="noTitle" id="881">
+                            <box boxType="oldStyle" borderType="none" title="Title" titlePosition="noTitle" id="881">
                                 <rect key="frame" x="0.0" y="0.0" width="286" height="603"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <view key="contentView" id="ybF-E1-OjN">
                                     <rect key="frame" x="0.0" y="0.0" width="286" height="603"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
-                                        <box title="Box" boxType="oldStyle" borderType="line" titlePosition="noTitle" id="1279">
+                                        <box boxType="oldStyle" borderType="line" title="Box" titlePosition="noTitle" id="1279">
                                             <rect key="frame" x="0.0" y="0.0" width="286" height="574"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <view key="contentView" id="J35-yS-yRW">
                                                 <rect key="frame" x="1" y="1" width="284" height="572"/>
                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             </view>
-                                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </box>
                                         <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="18" horizontalPageScroll="10" verticalLineScroll="18" verticalPageScroll="10" hasHorizontalScroller="NO" usesPredominantAxisScrolling="NO" id="730">
                                             <rect key="frame" x="0.0" y="1" width="286" height="572"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <clipView key="contentView" id="rpp-Zp-5MF">
                                                 <rect key="frame" x="0.0" y="0.0" width="286" height="572"/>
-                                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                <autoresizingMask key="autoresizingMask"/>
                                                 <subviews>
                                                     <outlineView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnResizing="NO" autosaveName="outViewer" rowHeight="16" indentationPerLevel="16" autoresizesOutlineColumn="YES" outlineTableColumn="722" id="728" customClass="FolderView">
-                                                        <rect key="frame" x="0.0" y="0.0" width="286" height="18"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="286" height="572"/>
                                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                         <size key="intercellSpacing" width="3" height="2"/>
                                                         <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -94,7 +93,6 @@ Cg
                                                         </connections>
                                                     </outlineView>
                                                 </subviews>
-                                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                             </clipView>
                                             <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="1383">
                                                 <rect key="frame" x="-100" y="-100" width="178" height="15"/>
@@ -121,12 +119,9 @@ Cg
                                                         </connections>
                                                     </searchFieldCell>
                                                 </searchField>
-                                                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="WD5-fk-h99">
+                                                <box verticalHuggingPriority="750" boxType="separator" id="WD5-fk-h99">
                                                     <rect key="frame" x="0.0" y="26" width="599" height="5"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                    <font key="titleFont" metaFont="system"/>
                                                 </box>
                                             </subviews>
                                             <connections>
@@ -135,8 +130,6 @@ Cg
                                         </customView>
                                     </subviews>
                                 </view>
-                                <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <font key="titleFont" size="11" name="LucidaGrande"/>
                             </box>
                             <customView id="982">
@@ -180,7 +173,7 @@ Cg
                             <outlet property="delegate" destination="1164" id="1406"/>
                         </connections>
                     </splitView>
-                    <box wantsLayer="YES" verticalHuggingPriority="750" alphaValue="0.5" title="Box" boxType="separator" titlePosition="noTitle" id="1365">
+                    <box wantsLayer="YES" verticalHuggingPriority="750" alphaValue="0.5" boxType="separator" id="1365">
                         <rect key="frame" x="0.0" y="19" width="942" height="5"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES"/>
                         <contentFilters>
@@ -193,9 +186,6 @@ Cg
                                 </configuration>
                             </ciFilter>
                         </contentFilters>
-                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                        <font key="titleFont" metaFont="system"/>
                     </box>
                     <button focusRingType="none" id="1400">
                         <rect key="frame" x="906" y="0.0" width="22" height="20"/>
@@ -985,7 +975,7 @@ CA
                     <rect key="frame" x="0.0" y="0.0" width="700" height="609"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                     <subviews>
-                        <box title="Title" boxType="oldStyle" borderType="line" titlePosition="noTitle" id="973">
+                        <box boxType="oldStyle" borderType="line" title="Title" titlePosition="noTitle" id="973">
                             <rect key="frame" x="0.0" y="0.0" width="700" height="298"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <view key="contentView" id="scf-1q-Ljq">
@@ -996,11 +986,11 @@ CA
                                         <rect key="frame" x="0.0" y="-1" width="698" height="298"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                         <clipView key="contentView" id="TOX-JT-adF">
-                                            <rect key="frame" x="0.0" y="17" width="698" height="281"/>
-                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="698" height="298"/>
+                                            <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <tableView focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="none" alternatingRowBackgroundColors="YES" autosaveColumns="NO" rowHeight="15" headerView="1386" id="977" customClass="MessageListView">
-                                                    <rect key="frame" x="0.0" y="0.0" width="0.0" height="17"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="698" height="281"/>
                                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                     <size key="intercellSpacing" width="3" height="2"/>
                                                     <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1010,7 +1000,6 @@ CA
                                                     </connections>
                                                 </tableView>
                                             </subviews>
-                                            <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                         </clipView>
                                         <scroller key="horizontalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="YES" id="1385">
                                             <rect key="frame" x="0.0" y="-30" width="683" height="15"/>
@@ -1027,11 +1016,9 @@ CA
                                     </scrollView>
                                 </subviews>
                             </view>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" size="11" name="LucidaGrande"/>
                         </box>
-                        <box title="Title" boxType="oldStyle" borderType="line" titlePosition="noTitle" id="978">
+                        <box boxType="oldStyle" borderType="line" title="Title" titlePosition="noTitle" id="978">
                             <rect key="frame" x="0.0" y="307" width="700" height="302"/>
                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             <view key="contentView" id="j1O-Fj-VJu">
@@ -1044,8 +1031,6 @@ CA
                                     </customView>
                                 </subviews>
                             </view>
-                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <font key="titleFont" size="11" name="LucidaGrande"/>
                         </box>
                     </subviews>
@@ -1073,10 +1058,10 @@ CA
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" flexibleMinY="YES" heightSizable="YES"/>
                     <clipView key="contentView" id="emU-La-Fur">
                         <rect key="frame" x="1" y="1" width="699" height="605"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" columnReordering="NO" columnSelection="YES" columnResizing="NO" multipleSelection="NO" autosaveColumns="NO" rowSizeStyle="automatic" viewBased="YES" id="NgO-hM-mCz" customClass="ExtendedTableView">
-                                <rect key="frame" x="0.0" y="0.0" width="1027" height="0.0"/>
+                                <rect key="frame" x="0.0" y="0.0" width="1027" height="605"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <size key="intercellSpacing" width="3" height="2"/>
                                 <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -1098,10 +1083,9 @@ CA
                                 </tableColumns>
                             </tableView>
                         </subviews>
-                        <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </clipView>
                     <scroller key="horizontalScroller" verticalHuggingPriority="750" horizontal="YES" id="S05-md-m5A">
-                        <rect key="frame" x="1" y="119" width="223" height="15"/>
+                        <rect key="frame" x="1" y="590" width="699" height="16"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </scroller>
                     <scroller key="verticalScroller" hidden="YES" verticalHuggingPriority="750" horizontal="NO" id="fza-gl-TLT">
@@ -1203,12 +1187,9 @@ CA
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                     <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="axesIndependently" id="1372"/>
                 </imageView>
-                <box verticalHuggingPriority="750" alphaValue="0.79577457904815674" title="Box" boxType="separator" titlePosition="noTitle" id="1392">
+                <box verticalHuggingPriority="750" alphaValue="0.79577457904815674" boxType="separator" id="1392">
                     <rect key="frame" x="0.0" y="46" width="491" height="5"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <font key="titleFont" metaFont="system"/>
                 </box>
             </subviews>
             <connections>
@@ -1270,12 +1251,9 @@ CA
                         <outlet property="nextKeyView" destination="971" id="1323"/>
                     </connections>
                 </searchField>
-                <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="1391">
+                <box verticalHuggingPriority="750" boxType="separator" id="1391">
                     <rect key="frame" x="0.0" y="26" width="599" height="5"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                    <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                    <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <font key="titleFont" metaFont="system"/>
                 </box>
             </subviews>
             <connections>
